responsive issues and navbar collapse completed

--- a/css/style.css
+++ b/css/style.css
@@ -39,15 +39,28 @@ html,body {
     margin: 13px 0 13px 10px;
 }
 .btn-nav {
+    padding: 10px 40px 10px 40px;
     background-color: #fff;
     border: solid 1px #fff;
     color: #1B4EFE;
-    box-shadow: 3px 4px 11px 0px rgba(0,0,0,0.5);
+    box-shadow: 1px 2px 2px 1px rgba(0,0,0,0.5);
 }
 .btn-nav-demo {
+        padding: 10px 40px 10px 40px;
         background-color: #f39c12;
         border: solid 1px rgba(255,255,255,.5);
         color: #fff;
+}
+.navbar-toggle {
+    background-color: rgba(0,0,0,0.1);
+    border:1px solid #fff;
+    
+}
+.navbar-toggle .icon-bar {
+    background-color: #000;
+}
+#own-menu {
+    background-color: #fff;
 }
 /*=====================
   Intro Section Rules
@@ -63,21 +76,6 @@ html,body {
         font-size: 1em;
         line-height: 1.75;
         color:#033BFF;
-}
-.mleft30 {
-    margin-left: 30px;
-}
-.mtop100 {
-    margin-top: 100px;
-}
-.mtop30 {
-    margin-top: 30px;
-}
-.mbtm30 {
-    margin-bottom: 30px;
-}
-.mright30 {
-    margin-right: 30px;
 }
 .intro h1 {
     margin-bottom: 10px;
@@ -104,3 +102,60 @@ html,body {
     float: right;
 
 }
+/*============================
+ custom constants for margin
+==============================*/
+.mleft30 {
+    margin-left: 30px;
+}
+.mtop100 {
+    margin-top: 100px;
+}
+.mtop30 {
+    margin-top: 30px;
+}
+.mbtm30 {
+    margin-bottom: 30px;
+}
+.mright30 {
+    margin-right: 30px;
+}
+/*===============
+responsive rules 
+================*/
+@media (min-width:1200px){
+    .navbar-nav {
+        background-color: #fff;
+    }
+}
+@media (min-width:992px) and (max-width:1199px) {
+    .navbar-nav {
+        background-color:#ecf0f1;
+    }
+}
+@media (min-width:768px) and (max-width:991px){
+    .navbar-left {
+        margin-bottom: 0px;
+    }
+    .navbar-collapse {
+        padding-left: 0px;
+    }
+    .mleft30 {
+        margin-left: 0;
+    }
+    .navbar-nav {
+        background-color: #ecf0f1;
+    }
+}
+@media (max-width:480px){
+    .navbar-collapse {
+        padding-left: 0px;
+    }
+    .mleft30 {
+        margin-left: 0;
+    }
+    .navbar-nav {
+        background-color: #ecf0f1;
+    } 
+}
+
